open some Java modules in main project