@@ -244,6 +244,18 @@ compileKotlin{
     dependsOn generateSyntaxHighlightingLexer
 }
 
+test {
+    jvmArgs = [
+        '--illegal-access=warn',
+        '--add-opens=java.base/jdk.internal.vm=ALL-UNNAMED',
+        '--add-opens=java.base/java.io=ALL-UNNAMED',
+        '--add-opens=java.desktop/sun.awt=ALL-UNNAMED',
+        '--add-opens=java.desktop/java.awt=ALL-UNNAMED',
+        '--add-opens=java.desktop/java.awt.event=ALL-UNNAMED',
+        '--add-opens=java.desktop/javax.swing=ALL-UNNAMED'
+    ]
+}
+
 repositories {
     mavenCentral()
 }
